add jade template for doc navigation and automation

--- a/public/src/routes/docs-raw.htm
+++ b/public/src/routes/docs-raw.htm
@@ -13,7 +13,7 @@
                           </h3>
                                 <ul>
                                   <li>
-                                    <h4><a href="#/docs/All/all">All</a>
+                                    <h4><a href="public/docs/documentations/All/all.htm">All</a>
                                     </h4>
                                   </li>
                                 </ul>
@@ -23,7 +23,7 @@
                           </h3>
                                 <ul>
                                   <li>
-                                    <h4><a href="#/docs/app/app-mixins">App mixins</a>
+                                    <h4><a href="public/docs/documentations/app/app-mixins.htm">App mixins</a>
                                     </h4>
                                   </li>
                                 </ul>
@@ -33,15 +33,15 @@
                           </h3>
                                 <ul>
                                   <li>
-                                    <h4><a href="#/docs/functions/_low-level"> low-level</a>
+                                    <h4><a href="public/docs/documentations/functions/_low-level.htm"> low-level</a>
                                     </h4>
                                   </li>
                                   <li>
-                                    <h4><a href="#/docs/functions/_math"> math</a>
+                                    <h4><a href="public/docs/documentations/functions/_math.htm"> math</a>
                                     </h4>
                                   </li>
                                   <li>
-                                    <h4><a href="#/docs/functions/_utils"> utils</a>
+                                    <h4><a href="public/docs/documentations/functions/_utils.htm"> utils</a>
                                     </h4>
                                   </li>
                                 </ul>
