--- a/public/src/routes/docs.htm
+++ b/public/src/routes/docs.htm
@@ -1,6 +1,6 @@
 
 <div class="row">
-  <h1 style="padding-left: 7px;"><a href="/">LessShell Docs</a></h1>
+  <h1 style="padding-left: 7px;"><a href="/">Docs</a></h1>
   <div class="col-sm-4">
     <div style="border-right: 1px solid #e5e6e7;">
             <ul>
